# sqlalchemy-playground

./: .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.json
.devcontainer/: devcontainer.json
alembic/versions/: 82fc602cda85_init.py
src/: 01_init_models.py  02_get_bucket.py  03_create_bucket.py  04_get_buckets.py  05-create_bucket_file.py  create_bucket_files.py  db.py  simple_run.py
src/domain/: bucket.py  value_objects.py
src/repository/: bucket_repository.py  dataset_repository.py  models.py
src/usecase/: bucket.py
